Modal fix for overlap frames (from develop)

--- a/IGRP/src/main/webapp/images/IGRP/IGRP2.3/themes/style.css
+++ b/IGRP/src/main/webapp/images/IGRP/IGRP2.3/themes/style.css
@@ -2433,6 +2433,10 @@ input[type="email"] {
 	z-index: 1051;
 }
 
+#igrp-iframe-nav.modal{
+	z-index: 1052;
+}
+
 .modal-backdrop.fade.in+.modal-backdrop.fade.in{
   z-index: 1050;
 }
